<resources>
    <string name="app_name">IdeasRápidas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Ingresa tu email</string>
    <string name="sign_up">Registrarse</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="enter_password">Ingresa tu contraseña</string>
    <string name="enter_repassword">Repite tu contraseña</string>
    <string name="ya_registrado">Ya registrado !!</string>
    <string name="no_registrado">No registrado !!</string>
    <string name="verefy_fields">Por favor, completa todos los campos antes de continuar.</string>
    <string name="password_erros">La contraseña no coinciden</string>
    <string name="task_save">Insertado</string>
    <string name="delete_data">Eliminado</string>
    <string name="update_data">Actualizado</string>
    <string name="btn_add">Agregar</string>
    <string name="enter_task">Ingresar nota</string>
    <string name="sucessful">Registrado exitosamente</string>
    <string name="confirm_delete">Confirmar eliminación</string>
    <string name="error_sesion">Por favor, verifica tu correo electrónico y contraseña e intenta nuevamente</string>
    <string name="error_campos">La contraseña debe tener al menos 6 caracteres</string>
    <string name="error_email_already">La dirección de correo electrónico ya está en uso por otra cuenta.</string>
</resources>